fortune-mod (9708-34) unstable; urgency=low

  * datfile/literature:298: Moved Anne Frank remark to the 
    offensive section.
    (closes: #208467, #208468)
  * datfile/linux:1821: Added Andrew Suffield quote
    (closes: #208975)

 -- Pascal Hakim <pasc@debian.org>  Sun,  7 Sep 2003 12:23:40 +1000

fortune-mod (9708-33) unstable; urgency=low

  * Use librecode instead of iconv, to deal with non-existing 
    characters in locales better. (Patch from Aurelien Jarno 
    <aurelien@aurel32.net>)
    (closes: #205061, #201230)
  * datfile/kids:144: fixed typo
    (closes: #204199)

 -- Pascal Hakim <pasc@debian.org>  Fri, 22 Aug 2003 11:22:46 +1000

fortune-mod (9708-32) unstable; urgency=low

  * Added missing % at the end of a number of fortune cookies
    (closes: #202341)
  * Added missing Build-Depends
    (closes: #202325)

 -- Pascal Hakim <pasc@debian.org>  Tue, 22 Jul 2003 12:21:29 +1000

fortune-mod (9708-31) unstable; urgency=low

  * datfile/off/linux:30: Fixed spelling of lactating
    (closes: #200718)
  * datfile/off/linux:37: Added tbm quote
    (closes: #202220)
  * Added utf-8 support.
    (Patch from Eduard Bloch <edi@gmx.de>)
    (closes: #178392, #179595)

 -- Pascal Hakim <pasc@debian.org>  Mon, 21 Jul 2003 18:07:00 +1000

fortune-mod (9708-30) unstable; urgency=low

  * datfile/food:781: Fixed spelling mistake in "vegetarian"
    (closes: #198083)
  * datfile/definition:3568: Changed posistion to position
    (closes: #198656)
  * datfile/politics:2967: Added a Mohammed Saeed al-Sahaf quote
    (closes: #199181)
  * datfiles/computer:5439: Added a GNU Libtool Manual quote
    (closes: #200613)
  * datfiles/linuxcookies:4: Removed duplicate quote (off/linux)
    (closes: #200615)
  * datfiles/off/linux:28: Added Overfiend quote
    (closes: #164941)

 -- Pascal Hakim <pasc@debian.org>  Thu, 10 Jul 2003 01:18:07 +1000

fortune-mod (9708-29) unstable; urgency=low

  * datafile/linux: Added quote from debian-legal
    (closes: #194346)